[package]
name = "rget"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
http = "1.3.1"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
